tests/frontend/fail/array/bad_deref2.act
constructor of A
interface constructor()

creates

  uint[2][2] x :=  [[0,0],[0,0]]

ensures
  x[1] == 2
